--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
         <p>Interactive elements will include tooltips, filtering, and other ways to engage with the data.</p>
     
         <h3>Treemap: Medication Preference by Medical Condition</h3>
-        <iframe src="treemap.html" width="100%" height="600" style="border:none; border-radius: 10px;"></iframe>
+        <iframe src="treemap.html" width="100%" height="600" style="border:none; border-radius: 10px;">
+            
         <p>
             This interactive treemap reveals which medications are most commonly associated with specific medical conditions. 
             It highlights treatment patterns — for example, Lipitor appears frequently with hypertension and diabetes. 
