--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
         </p>
     </div>
 
+    <div class="section" id="references">
+        <h2>References</h2>
+        <ul>
+            <li><a href="https://journals.lww.com/jbjsjournal/Fulltext/2015/07010/What_Drives_Variation_in_Episode_of_Care_Payments.1.aspx" target="_blank">Garrity et al. (2015) - Journal of Bone and Joint Surgery</a></li>
+            This study analyzes which factors influence variation in Medicare payments for primary total knee arthroplasty (TKA), 
+            including patient demographics. The findings reveal that there is a significant difference in payment amounts across 
+            hospitals, with demographics accounting for a portion of that variation. This aligns with our research on how patient 
+            demographics affect healthcare episodes, particularly in relation to cost and resource allocation.
+
+            <li><a href="https://www.healthaffairs.org/doi/10.1377/hlthaff.27.3.528" target="_blank">Jha et al. (2008) - Health Affairs</a></li>
+            This study examines how patient age and ethnicity correlate with hospital care quality and patient outcomes, 
+            aligning with our research on demographic influence in healthcare episodes.
+        </ul>
+    </div>
+
     <div class="section" id="data">
         <h2>Data Overview</h2>
         <p>
@@ -87,13 +102,6 @@
         </p>
     </div>
 
-    <div class="section" id="references">
-        <h2>References</h2>
-        <ul>
-            <li><a href="https://journals.lww.com/jbjsjournal/Fulltext/2015/07010/What_Drives_Variation_in_Episode_of_Care_Payments.1.aspx" target="_blank">Garrity et al. (2015) - Journal of Bone and Joint Surgery</a></li>
-            <li><a href="https://www.healthaffairs.org/doi/10.1377/hlthaff.27.3.528" target="_blank">Jha et al. (2008) - Health Affairs</a></li>
-        </ul>
-    </div>
 
     <hr>
 
