--- a/visualization_page.html
+++ b/visualization_page.html
@@ -77,7 +77,25 @@
         </p>
         <iframe src="treemap_shift.html" width="100%" height="600" style="border:none; border-radius: 10px;"></iframe>
         <p>
-            [DESCRIPTION]
+            This treemap displays the most commonly prescribed medications for each medical condition. While medications like 
+            Lipitor, which treats high cholesterol, appear frequently under conditions like hypertension and diabetes, it’s 
+            surprising to also see it listed under cancer. Similarly, Penicillin appears as the top medication for arthritis, 
+            asthma, and diabetes, despite those conditions not being bacterial. These patterns raise important questions: Are 
+            these medications being prescribed due to underlying comorbidities, or is there a tendency toward standardized 
+            treatment across patients? This visualization not only highlights treatment trends but encourages us to question 
+            whether care is truly personalized or if there may be gaps in individualized decision-making.
+        </p>
+        <br>
+        <p>
+            Since there are similarities in top Medications per Condition, this may suggest similarities in the Conditions themselves.
+            For instance, since Ibuprofen and Aspirin are leading medications for Asthma and Obesity, this could mean that 
+            they are related in some way. This would make sense, given that there is a higher possibility of developing Asthma 
+            for people with Obesity, given how it affects their respiratory system. Additionally, the similarities in medications 
+            may suggest that the patients are developing secondary conditions that require common medications like Penicillin,
+            common for infection treatment, and Ibuprofen, typical for pain treatment. However, Lipitor, a cholesterol treatment,
+            is the leading medication for Cancer, which is an atypical Cancer treatment. This might suggest prescription bias with
+            our doctors - are they pushing a medication for brand partnernship that these patients don't need?
+
         </p>
 
         <hr>
@@ -101,7 +119,21 @@
         <br>
         <br>
         <p>
-            [DESCRIPTION]
+            This visualization dislays box plots by different Medical Conditions or by Insurance Providers and the different
+            Billing Amounts associated with each category option. When grouping by Medical Condition, we see a slight descent
+            in the maximum billing amounts for each option, with Cancer having the highest Billing Amount at $39,000 and Obesity 
+            having the lowest at $35,000. Obesity also holds the lowest Billing Amount with range minimum of around $2,000. The median 
+            for each category is around $25,000. Per Insurance Provider, we see Aetna with the lowest range at about $3,000 and
+            UniteHealthcare with the highest, about $39,000. The average Billing Amount across all Providers is again around $25,000.
+        </p>   
+        <br>
+        <p>
+            The image suggests that Obesity has the highest variability in gravity given that the range is so large, while Cancer
+            is usually a more serious condition to treat being the the most expensive Condition with the smallest range. Exploring
+            our Providers, we can assume that the average patient is insured by Aetna given their large range and lowest minimum
+            Billing Amount. Their range may be pulled lower on the scale due to an increased non-emergent caseload, where they
+            insure patients going in for their annual checkups. This is an option in Admission Type. UnitedHealthcare is the world's
+            leading Insurance Provider, and given their higher range, this may be from the more expensive cases they deal with.
         </p>
 
         <script src='https://d3js.org/d3.v7.min.js'></script>
@@ -117,7 +149,19 @@
         </p>
         <iframe src="Gender_Average_Duration.html" width="100%" height="600" style="border:none; border-radius: 10px;"></iframe>
         <p>
-            [DESCRIPTION]
+            This chart allows the user to interact with the data by hovering over the bars. The bars are split by gender - female and male. 
+            This plot allows users to view information on the number of patients of a certain gender and age group, and find out 
+            more about their average duration of stay. There are notably less patients in the 80-90 age group compared 
+            to the rest of the age groups, likely due to the fact that many patients don’t survive until old age, which can be 
+            inferred from the 70-80 age group since it has the highest number of patients compared to the rest of the age groups. 
+            Also, It is interesting to see that among the older population, there is a higher number of female patients while there 
+            is a greater number of male patients in the younger population. However, the variation in the number of patients starts 
+            to decrease around the middle age years, especially in the 50-60 range where there is less patient number difference 
+            between the two genders. When the user hovers of the bars, information such as the binned age group, gender, number
+            of patients, and duration of stay show. Across the board, average duration of stay is 15 - 16 days. This two week
+            period is typical within hospitals to give patients (in Emergency or Urgent Cases) time for operation on their Condition,
+            a rest period, and final checkup.
+
         </p>
     
         <hr>
@@ -131,7 +175,16 @@
         </p>
         <iframe src="Gender_Test_Results.html" width="100%" height="600" style="border:none; border-radius: 10px;"></iframe>
         <p>
-            [DESCRIPTION]
+            This static image showcases distribution fo test results by gender. The test result information is split by Inconclusive, 
+            Abnormal, and Normal results. Abnormal results are nearly equal for both genders. However, males 
+            tend to have more Normal results than females, while females have slightly more Inconclusive results than males. 
+            This could suggest biases in the sampling population, such as a healthier male population. These subtle differences 
+            may also point to underlying factors worth further investigation, such as test sensitivity or healthcare access. 
+            From this visual we may ask - do males have more access to healthcare than females? Are there errors in existing diagnostic 
+            tools for test results? We see that there is a higher Abnormal test result population in the dataset, which may indicate
+            a hospital that deals with higher ambiguity in patient health and behavior. Additionally, There are much higher Abnormal
+            test results in females than there are Normal. This suggests that patients who come in for a checkup are receiving 
+            Abnormal results.
         </p>
 
 
