added mosaic plot, interactive barplots, and edits to webpage

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <div style="display: flex; align-items: center; justify-content: space-between;">
         <h3><i>Let's look at some Visualizations</i></h3>
-        <button id="NB">Visualizations</button>
+        <button id="NB" style="padding: 10px 20px; font-size: 16px;">Visualizations</button>
     </div>
     
     <script>
