fixed spelling errors in paragraphs

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
             <br>
             <br>
 
-            This interactive, investigative site can be enhanced to dive deeper into the issues pointed out by the current visualizaitons.
-            If there is no much variability shown between the patients themselves but rather the hospital's treamtent plans and and choices, we can implement
+            This interactive, investigative site can be enhanced to dive deeper into the issues pointed out by the current visualizations.
+            If there is not much variability shown between the patients themselves but rather the hospital's treatment plans and and choices, we can implement
             more visualizations comparing hospital patterns and general insights. It may be a good idea to take a look at the specific doctors and hospitals
             that are showcasing atypical patterns and to investigate possible bias and malpractice, however, more Episode of Care field details would be needed to 
             draw accurate assumptions.
