--- a/visualization_page.html
+++ b/visualization_page.html
@@ -178,7 +178,7 @@
         </p>
         <iframe src="admission_trend.html" width="100%" height="600" style="border:none; border-radius: 10px;"></iframe>
         <p>
-            The purpose of these trendlines are to highlight any seasonal differences in the patient counts the hospita has within each 
+            The purpose of these trendlines are to highlight any seasonal differences in the patient counts the hospital has within each 
             Medical Condition they diagnose. It would be useful to understand any conditional patterns to give recommendations on the hospital's treatment
             plans since we'd have a better understanding of a full year's Condition rate.
         </p>
@@ -187,11 +187,11 @@
             From this graph, we see consistent daily record counts of 1-2 patients per Medical Condition, with several 3-count cases of obesity and arthritis as 
             demonstrated by the dark blue and yellow lines throughout the year. Asthma appears consistently, however it peaks towards the end of December/early January,
             suggesting a correlation with the colder months. This could be due increased airway irritation and narrowing from cold air, and the various respiratory 
-            viruses that occur during this time. The hospitals should remain weary of holidays as Thanksgiving time sees a spike in diabetes patient count. 
+            viruses that occur during this time. Hospitals should remain weary of holidays as Thanksgiving time sees a spike in diabetes patient count. 
             Cancer and hypertension offer the highest patient counts in 2023, peaking at a 5-count case in May for cancer and 
             7-count case in October for hypertension. Cancer shows increased counts every quarter, which suggests a general pattern in treatment plan for these patients.
-            Hypterension shows higher counts in the Summer and beginning of Fall, which is atypical for this particular Condition as blood vessel constriction is a more
-            common response to lower temperatures. The hospitals should investigate these cases to ensure correct diagnoses.
+            Hypertension shows higher counts in the Summer and beginning of Fall, which is atypical for this particular Condition as blood vessel constriction is a more
+            common response to lower temperatures. Hospitals should investigate these cases to ensure correct diagnoses.
         </p>
 
 
