--- a/index.html
+++ b/index.html
@@ -87,14 +87,9 @@
             The dataset contains information about patient demographics and their episodes of care, including attributes such as:
         </p>
         <ul>
-            <li>Age</li>
-            <li>Gender</li>
-            <li>Medical Condition</li>
-            <li>Date of Admission and Discharge</li>
-            <li>Test Results</li>
-            <li>Medication</li>
-            <li>Insurance Provider</li>
-            <li>Billing Amount</li>
+            <li><b>Patient Demographics Info:</b> age, gender</li>
+            <li><b>Condition Info:</b> medical condition, test results, medication</li>
+            <li><b>Event Info:</b> billing amount, date of admission and discharge, insurance provider, duration of stay</li>
         </ul>
         <p>
             An additional derived attribute, <strong>Duration of Stay</strong>, was calculated by subtracting the admission date from the discharge date. 
