added title to boxplot

--- a/visualization_page.html
+++ b/visualization_page.html
@@ -106,6 +106,8 @@
             This boxplot shows the Billing Amount distribution by Insurance Provider or by Medical Condition.
         </p>
 
+        <h4> Billing Amount by Insurance Provider/Medical Condition </h4>
+
         <div id="boxplot"></div>
 
         <label for = "groupSelect">Grouping: </label>
