--- a/visualization_page.html
+++ b/visualization_page.html
@@ -75,7 +75,10 @@
         <p>
             This interactive treemap reveals which Medications are most commonly associated with specific Medical Conditions.
         </p>
-        <iframe src="treemap_shift.html" width="100%" height="600" style="border:none; border-radius: 10px;"></iframe>
+
+        <h5 style = "font-family: sans-serif; padding-left: 200px;">Medication Preference by Medical Condition</h5>
+
+        <iframe src="treemap_final.html" width="100%" height="600" style="border:none; border-radius: 10px;"></iframe>
         <p>
             This treemap displays the most commonly prescribed Medications for each Medical Condition. While Medications like 
             lipitor, which treats high cholesterol, appear frequently under Conditions like hypertension and diabetes, it is 
