title and font updates

--- a/visualization_page.html
+++ b/visualization_page.html
@@ -76,7 +76,7 @@
             This interactive treemap reveals which Medications are most commonly associated with specific Medical Conditions.
         </p>
 
-        <h5 style = "font-family: sans-serif; padding-left: 200px;">Medication Preference by Medical Condition</h5>
+        <h5 style = "font-family: sans-serif; font-size: 14; padding-left: 230px; margin-bottom: -12px; color: black">Medication Preference by Medical Condition</h5>
 
         <iframe src="treemap_final.html" width="100%" height="600" style="border:none; border-radius: 10px;"></iframe>
         <p>
@@ -109,7 +109,7 @@
             This boxplot shows the Billing Amount distribution by Insurance Provider or by Medical Condition.
         </p>
 
-        <h4> Billing Amount by Insurance Provider/Medical Condition </h4>
+        <h5 style = "font-family: sans-serif; padding-left: 200px; font-size: 14; color: black; margin-bottom: -8px"> Billing Amount by Insurance Provider/Medical Condition </h5>
 
         <div id="boxplot"></div>
 
@@ -167,6 +167,9 @@
         <p>
             This mosaic plot reveals the proportions of the number of patients with each test result based on gender.
         </p>
+
+        <h5 style = "font-family: sans-serif; padding-left: 300px; font-size: 14; color: black; margin-bottom: -8px;">Comparison of Gender and Test Result Types</h5>
+
         <iframe src="mosaic_plot.html" width="100%" height="600" style="border:none; border-radius: 10px;"></iframe>
         <p>
             The mosaic plot provides a clear overview of the proportions of Test Results across genders. 
