fixed intro details

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         <img src="project_intro.jpg" alt="Healthcare image" style="float: right; margin: 10px 0 10px 20px; max-width: 300px; border-radius: 10px;">
         <p>
             Research has shown that healthcare outcomes and treatment experiences can greatly vary from patient to patient based on their demographics. 
-            Factors such as age, gender, and medical condition influence key aspects of a patient’s episode of care, such as length of hospital stay and test results. 
-            Our work aims to analyze how patient demographics impact healthcare episodes using a Kaggle healthcare dataset. 
-            Specifically, we explore whether certain age groups are associated with shorter hospital stays, whether specific medical conditions correlate with extended hospitalization, 
-            and if inconclusive test results are linked to quicker discharges. By leveraging data visualization and statistical analysis, we aim to uncover patterns that could inform better healthcare decisions.
+            Factors such as age, gender, and medical condition influence key aspects of a patient’s Episode of Care (a defined period during which a patient receives a 
+            specific set of services related to a particular condition or medical event), such as length of hospital stay and test results. 
+            Our work aims to analyze how patient demographics impact their Episodes of Care using a Kaggle healthcare dataset. 
+            By leveraging data parsing, analysis, and visualization, we aim to uncover patterns that could inform better healthcare decisions.
         </p>
     </div>
 
