added dataset link

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     <div class="section" id="data">
         <h2>Data Overview</h2>
         <p>
-            Our dataset comes from <b>Kaggle</b> and originally includes 55,500 observations. 
-            We filtered it down to approximately 5,000–8,000 records for manageable analysis. 
+            <a href = "https://www.kaggle.com/datasets/prasad22/healthcare-dataset" target = "_blank"> Our dataset</a> comes from <b>Kaggle</b> and originally includes 55,500 observations. 
+            We filtered it down to approximately 5,000–8,000 records for manageable analysis.
             The dataset contains information about patient demographics and their episodes of care, including attributes such as:
         </p>
         <ul>
